feat: Introduce Playwright Page Object Model for client application, including new test, page objects, and VS Code debug setup.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
+            "name": "Debug Client App PO",
+            "program": "${workspaceFolder}/node_modules/@playwright/test/cli.js",
+            "args": [
+                "test",
+                "tests/client-app-po.spec.js",
+                "--headed",
+                "--timeout=0"
             ],
-            "program": "${workspaceFolder}\\tests\\utils\\excel-demo.js"
+            "console": "integratedTerminal"
         }
     ]
 }
