--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx playwright test tests/web-api-part1.spec.js --headed",
     "regression": "npx playwright test",
     "webTests": "npx playwright test --grep @Web",
-    "apiTests": "npx playwright test --grep @API",
+    "apiTests": "npx playwright test --grep @Api",
     "sideConfig": "npx playwright test --config=playwright.config1.js --project=safari"
   },
   "keywords": [],
