--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@azure/identity": "^4.13.0",
+    "@azure/playwright": "^1.1.1",
     "@cucumber/cucumber": "^12.5.0",
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.0",
