--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^24.3.0",
     "allure-commandline": "^2.36.0",
     "allure-playwright": "^3.4.3",
+    "dotenv": "^17.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
